✨ feat(增加排序筛选): 筛选条件增加

--- a/app/src/resources/i18n/ja.json
+++ b/app/src/resources/i18n/ja.json
@@ -725,7 +725,8 @@
     "used-at": "乗車時間",
     "used-username": "ユーザーを請求する",
     "is-subscribed-tips": "サブスクリプション判断ロジック：サブスクリプションティアがあり、サブスクリプション期間が満了していません",
-    "expired-at": "サブスクリプションの有効期限"
+    "expired-at": "サブスクリプションの有効期限",
+    "id": "ID"
   },
   "mask": {
     "title": "プリセット設定",
