--- a/app/src/resources/i18n/ru.json
+++ b/app/src/resources/i18n/ru.json
@@ -725,7 +725,8 @@
     "used-at": "Время награждения",
     "used-username": "Получить пользователя",
     "is-subscribed-tips": "Логика суждения о подписке: существует уровень подписки, и период подписки не истек",
-    "expired-at": "Срок действия подписки"
+    "expired-at": "Срок действия подписки",
+    "id": "Айди"
   },
   "mask": {
     "title": "Настройки маски",
