--- a/app/src/resources/i18n/tw.json
+++ b/app/src/resources/i18n/tw.json
@@ -780,7 +780,8 @@
       "title": "服務日誌",
       "console": "控制台",
       "consoleLength": "日誌數量"
-    }
+    },
+    "id": "Idfo idfo"
   },
   "mask": {
     "title": "預設設定",
