--- a/app/src/resources/i18n/cn.json
+++ b/app/src/resources/i18n/cn.json
@@ -717,6 +717,8 @@
       "mailConfNotValid": "SMTP 发件参数未正确配置，已禁用邮箱验证",
       "mailWhitelist": "域名后缀白名单",
       "mailWhitelistSelected": "已选 {{length}} 个域名邮箱",
+      "mailReplyTo":"回复地址" ,
+      "mailReplyToPlaceholder":"输入回复地址（可选）",
       "mailWhitelistSearchPlaceholder": "搜索域名后缀",
       "customWhitelistPlaceholder": "请输入自定义域名后缀列表（输入后将出现在选项列表中可供选择），使用英文逗号分隔，如：example.com,example.net",
       "searchEndpoint": "搜索接入点",
