--- a/app/src/resources/i18n/cn.json
+++ b/app/src/resources/i18n/cn.json
@@ -508,6 +508,19 @@
     "default-password": "密码修改提示",
     "default-password-prompt": "您的管理员密码为默认密码，为了您的账号安全，请尽快修改密码。（前往后台管理 - 系统设置 - 修改 Root 密码）",
     "chatnio-format-only": "此格式为 Chat Nio 独有格式",
+    "search-operation": "搜索操作",
+    "filter-by-user-id": "按用户ID筛选",
+    "sort-by": "排序方式",
+    "user-id": "用户ID",
+    "operation": "操作",
+    "quota-change": "配额变化",
+    "quota-before": "变更前配额",
+    "quota-after": "变更后配额",
+    "used-change": "已用变化",
+    "used-before": "变更前已用",
+    "used-after": "变更后已用",
+    "no-quota-logs": "暂无配额变更记录",
+    "quota-log": "配额变更日志",
     "identity": {
       "normal": "普通用户",
       "api_paid": "其他付费用户",
