--- a/app/src/resources/i18n/en.json
+++ b/app/src/resources/i18n/en.json
@@ -446,6 +446,22 @@
       "advanced": "Advanced settings",
       "group-placeholder": "{{length}} groups selected",
       "group-desc": "User type grouping, groups not included will not be included in the available scope of this channel (when the grouping is empty, all users can use this channel), no need to set the grouping for non-special cases",
+      "search-operation": "Search Operation",
+      "filter-by-user-id": "Filter by User ID",
+      "sort-by": "Sort By",
+      "user-id": "User ID",
+      "username": "Username",
+      "operation": "Operation",
+      "quota-change": "Quota Change",
+      "quota-before": "Quota Before",
+      "quota-after": "Quota After",
+      "used-change": "Used Change",
+      "used-before": "Used Before",
+      "used-after": "Used After",
+      "created-at": "Created At",
+      "no-quota-logs": "No Quota Change Logs",
+      "quota-log": "Quota Change Log",
+      "error": "Error",
       "groups": {
         "anonymous": "anonymous user",
         "normal": "Normal",
