--- a/app/src/resources/i18n/ru.json
+++ b/app/src/resources/i18n/ru.json
@@ -601,7 +601,9 @@
       "searchImageProxy": "Включить прокси-сервер изображений",
       "searchImageProxyTip": "Image proxy, изображение, возвращаемое поисковой системой после открытия, будет загружено через прокси сервисного узла SearXNG",
       "searchTest": "Поиск викторины",
-      "searchTestTip": "Поиск теста, введите запрос для поиска теста"
+      "searchTestTip": "Поиск теста, введите запрос для поиска теста",
+      "mailReplyTo": "Адрес отправителя",
+      "mailReplyToPlaceholder": "Введите адрес ответа (необязательно)"
     },
     "user": "Управление пользователями",
     "invitation-code": "Код приглашения",
@@ -726,7 +728,20 @@
     "used-username": "Получить пользователя",
     "is-subscribed-tips": "Логика суждения о подписке: существует уровень подписки, и период подписки не истек",
     "expired-at": "Срок действия подписки",
-    "id": "Айди"
+    "id": "Айди",
+    "search-operation": "Действия поиска",
+    "filter-by-user-id": "Фильтр по идентификатору пользователя",
+    "sort-by": "Сортировать по",
+    "user-id": "ID пользователя",
+    "operation": "Операция",
+    "quota-change": "Изменения квот",
+    "quota-before": "Квота до изменения",
+    "quota-after": "Квота после изменения",
+    "used-change": "Используемые вариации",
+    "used-before": "Использовано до изменения",
+    "used-after": "Используется после изменения",
+    "no-quota-logs": "Изменений квот не зафиксировано",
+    "quota-log": "Журнал изменений квот"
   },
   "mask": {
     "title": "Настройки маски",
