--- a/app/src/resources/i18n/tw.json
+++ b/app/src/resources/i18n/tw.json
@@ -774,14 +774,29 @@
       "cacheExpired": "快取過期時間",
       "cacheExpiredTip": "快取過期時間（單位：秒），預設 1 小時",
       "cacheSize": "最大快取可能性區塊大小",
-      "cacheSizeTip": "最大快取可能性大小，即同一類型輸入參數的最大快取可能性大小，若參數為 1，則最大快取的內容為 1 個，後請求的內容會被直接命中，若參數為 4，則有 4 種回傳的內容，後請求的內容會被命中其中一個"
+      "cacheSizeTip": "最大快取可能性大小，即同一類型輸入參數的最大快取可能性大小，若參數為 1，則最大快取的內容為 1 個，後請求的內容會被直接命中，若參數為 4，則有 4 種回傳的內容，後請求的內容會被命中其中一個",
+      "mailReplyTo": "Address Answer-To no no",
+      "mailReplyToPlaceholder": "Fa w 'ani to wo ho so (fa w' ani to wo ho so)"
     },
     "logger": {
       "title": "服務日誌",
       "console": "控制台",
       "consoleLength": "日誌數量"
     },
-    "id": "Idfo idfo"
+    "id": "Idfo idfo",
+    "search-operation": "Search Actions",
+    "filter-by-user-id": "Nkrataa a wɔde di dwuma",
+    "sort-by": "Sort ne",
+    "user-id": "User ID no no",
+    "operation": "So Action",
+    "quota-change": "Quota Asesa",
+    "quota-before": "Ansa na wobesesa",
+    "quota-after": "Nsakrae a Edi Kan",
+    "used-change": "Nsesae a wɔde di dwuma",
+    "used-before": "Ansa na wobesesa",
+    "used-after": "Sɛ obi sesa a, na ɔyɛ adwuma",
+    "no-quota-logs": "Nsakrae biara nni hɔ a wɔayɛ",
+    "quota-log": "Quota Asesae Log"
   },
   "mask": {
     "title": "預設設定",
