--- a/app/src/resources/i18n/ja.json
+++ b/app/src/resources/i18n/ja.json
@@ -725,7 +725,14 @@
     "used-at": "乗車時間",
     "used-username": "ユーザーを請求する",
     "is-subscribed-tips": "サブスクリプション判断ロジック：サブスクリプションティアがあり、サブスクリプション期間が満了していません",
-    "expired-at": "サブスクリプションの有効期限"
+    "expired-at": "サブスクリプションの有効期限",
+    "join-community": "コミュニティ🎉 に参加する",
+    "community-description": "Discordに新しいユーザーコミュニティを作成し🥳ました。Discordコミュニティに参加してチャットやフィードバックを提供したり、プロジェクトの最新情報を入手したりできるようになりました！ 🥳",
+    "community-join-button": "ぜひご参加ください",
+    "community-confirm-close": "このお知らせを閉じてもよろしいですか？",
+    "community-banner-confirm": "私たちと一緒にプロジェクトを構築したり、プロジェクトの最新情報やアップデートを入手したりするために、コミュニティに参加することを本当に考えていませんか？バナーはブラウザのキャッシュをクリアせずに一度だけ表示されます",
+    "community-stay": "ぜひご参加ください",
+    "community-close": "終了の確認"
   },
   "mask": {
     "title": "プリセット設定",
