--- a/app/src/resources/i18n/ru.json
+++ b/app/src/resources/i18n/ru.json
@@ -725,7 +725,14 @@
     "used-at": "Время награждения",
     "used-username": "Получить пользователя",
     "is-subscribed-tips": "Логика суждения о подписке: существует уровень подписки, и период подписки не истек",
-    "expired-at": "Срок действия подписки"
+    "expired-at": "Срок действия подписки",
+    "join-community": "🎉 Присоединиться к сообществу",
+    "community-description": "🥳 Мы создали новое сообщество пользователей в Discord, и теперь вы можете присоединиться к нашему сообществу Discord, чтобы общаться и оставлять отзывы или получать новости о своих проектах! 🥳",
+    "community-join-button": "Присоединяйтесь к нам",
+    "community-confirm-close": "Вы уверены, что хотите закрыть это объявление?",
+    "community-banner-confirm": "Вы действительно не задумываетесь о том, чтобы присоединиться к сообществу для создания проектов с нами или для получения обновлений и обновлений по проектам? Баннер будет отображаться только один раз без очистки кэша браузера",
+    "community-stay": "Присоединяйтесь к нам",
+    "community-close": "Подтверждение выхода"
   },
   "mask": {
     "title": "Настройки маски",
