🐞 fix(视觉模型): 视觉模型管理

--- a/app/src/resources/i18n/cn.json
+++ b/app/src/resources/i18n/cn.json
@@ -804,6 +804,19 @@
       "title": "服务日志",
       "console": "控制台",
       "consoleLength": "日志条数"
+    },
+    "vision": {
+      "title": "视觉模型",
+      "description": "在这里配置支持图像输入的视觉模型列表。配置后,系统将正确处理这些模型的图像数据。每行输入一个模型ID。",
+      "models-label": "视觉模型列表",
+      "models-placeholder": "每行输入一个模型ID\n例如:\ngpt-4o-mini\ngpt-4-vision-preview\nclaude-3-opus\ngemini-pro-vision",
+      "models-hint": "每行一个模型ID,修改后点击保存,然后点击应用使配置生效",
+      "save": "保存配置",
+      "saving": "保存中...",
+      "refresh": "应用配置",
+      "refreshing": "应用中...",
+      "refresh-hint": "点击\"应用配置\"按钮使保存的配置立即生效。应用后,系统会重新加载视觉模型列表。",
+      "load-error": "加载配置失败"
     }
   },
   "mask": {
