--- a/app/src/resources/i18n/ru.json
+++ b/app/src/resources/i18n/ru.json
@@ -749,7 +749,20 @@
     "community-confirm-close": "Вы уверены, что хотите закрыть это объявление?",
     "community-banner-confirm": "Вы уверены, что не хотите присоединиться к сообществу, чтобы помочь в развитии проекта или получать обновления и новости? Этот баннер будет показан только один раз, если вы не очистите кэш браузера",
     "community-stay": "Присоединиться к нам",
-    "community-close": "Подтвердить закрытие"
+    "community-close": "Подтвердить закрытие",
+    "vision": {
+      "title": "Визуальная модель",
+      "description": "Настройте здесь список визуальных моделей, которые поддерживают ввод изображений. После настройки система правильно обработает данные изображения для этих моделей. Введите один идентификатор модели в строке.",
+      "models-label": "Перечень визуальных моделей",
+      "models-placeholder": "Введите один идентификатор модели в строке\nНапример:\ngpt-4o-mini\ngpt-4-vision-preview\nclaude-3-opus\ngemini-pro-vision",
+      "models-hint": "Один идентификатор модели на строку, нажмите Сохранить после изменения, а затем нажмите Применить, чтобы сделать конфигурацию эффективной",
+      "save": "Записать конфигурацию",
+      "saving": "Сохранение",
+      "refresh": "Конфигурация приложения",
+      "refreshing": "Применение...",
+      "refresh-hint": "Нажмите кнопку Apply Configuration (Применить конфигурацию), чтобы сохраненная конфигурация немедленно вступила в силу. После применения список визуальных моделей будет перезагружен.",
+      "load-error": "Не удалось загрузить конфигурацию"
+    }
   },
   "mask": {
     "title": "Настройки маски",
