--- a/app/src/resources/i18n/ru.json
+++ b/app/src/resources/i18n/ru.json
@@ -303,7 +303,9 @@
     "total-price": "Общая цена",
     "upgrade-price-label": "Плата за повышение класса обслуживания",
     "upgrade-price-notice": "Только для информации",
-    "upgrade-price-notice-tip": "Плата за обновление указана только для справки, а фактическая цена основана на точном расчете сервера."
+    "upgrade-price-notice-tip": "Плата за обновление указана только для справки, а фактическая цена основана на точном расчете сервера.",
+    "refresh-days": "Квота обновится через {{refresh_days}} дн.",
+    "get-refresh-days": "Начните с квот, чтобы получить даты обновления"
   },
   "cancel": "Отмена",
   "confirm": "Подтвердить",
