--- a/app/src/resources/i18n/ru.json
+++ b/app/src/resources/i18n/ru.json
@@ -1337,7 +1337,9 @@
     "viewImage": "Показать изображение",
     "imageLoadFailed": "Не удалось загрузить изображение {{src}}",
     "base64Image": "Развернуть изображение Base64",
-    "base64ImageCollapse": "Свернуть базу изображений64"
+    "base64ImageCollapse": "Свернуть базу изображений64",
+    "viewVideo": "Смотреть",
+    "videoLoadFailed": "Не удалось загрузить видео {{src}}"
   },
   "login-action": "Войдите, чтобы пользоваться другими функциями",
   "anonymous": "Не вошёл в",
